fix: overflow icon sidebar

--- a/src/angular-business/header/header/header.component.scss
+++ b/src/angular-business/header/header/header.component.scss
@@ -38,7 +38,8 @@ $sbbHeaderHeight: pxToRem(54);
 
 ::ng-deep {
   .sbb-header-environment {
-    z-index: 0;
+    z-index: 1;
+    pointer-events: none;
     width: pxToRem(80);
     position: absolute;
     top: pxToRem(12);
